# polypulse

./: CHANGELOG.md  LAUNCH.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: print_top_of_book.py  react_to_updates.py  run_benchmark.py
polypulse/: __init__.py  benchmark.py  cli.py  feed.py  markets.py  orderbook.py  rest.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_feed.py  test_integration.py  test_markets.py  test_orderbook.py  test_rest.py
