[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polypulse"
version = "0.1.0"
description = "Real-time pulse of Polymarket — an order book feed that never freezes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gavr625" }]
keywords = ["polymarket", "prediction-markets", "orderbook", "websocket", "clob", "low-latency", "asyncio", "trading"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/Gavr625/polypulse"
Issues = "https://github.com/Gavr625/polypulse/issues"

[project.scripts]
polypulse = "polypulse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["polypulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: live network tests (deselected by default)"]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
